Added route to get latest news
