# src/api/endpoints/routes/newsRoutes.go
@@ -1,0 +1,16 @@
+package routes
+
+import (
+	"github.com/labstack/echo/v4"
+	"vnc-read-api/api/config/diconteiner"
+)
+
+func loadNewsRoutes(group *echo.Group) {
+	newsHandler := diconteiner.GetNewsHandler()
+
+	group = group.Group("/news")
+	loadPropositionRoutes(group)
+	loadNewsletterRoutes(group)
+
+	group.GET("", newsHandler.GetNews)
+}
