# src/docs/swagger.yaml
@@ -1,22 +1,5 @@
 basePath: /api/v1
 definitions:
-  response.Party:
-    properties:
-      acronym:
-        type: string
-      code:
-        type: integer
-      created_at:
-        type: string
-      id:
-        type: string
-      image_url:
-        type: string
-      name:
-        type: string
-      updated_at:
-        type: string
-    type: object
   response.SwaggerDeputy:
     properties:
       code:
@@ -41,7 +24,9 @@ definitions:
         example: José da Silva Santos
         type: string
       party:
-        $ref: '#/definitions/response.Party'
+        $ref: '#/definitions/response.SwaggerParty'
+      party_in_the_proposal:
+        $ref: '#/definitions/response.SwaggerParty'
       updated_at:
         example: "2022-08-07T15:55:00Z"
         type: string
@@ -52,19 +37,99 @@ definitions:
         example: 'Parâmetro inválido: ID da Proposição'
         type: string
     type: object
-  response.SwaggerKeyword:
+  response.SwaggerNews:
     properties:
+      content:
+        example: Foi sancionado o projeto de lei que altera a Lei n° 11.033 para prorrogar
+          o Regime Tributário...
+        type: string
       created_at:
-        example: "2019-01-02T09:44:00Z"
+        example: "2024-01-05T20:25:19Z"
         type: string
       id:
-        example: ae01ec73-306b-4726-9ae7-4a90594ae994
+        example: b27947d6-3224-4479-8da4-7917ae16b34d
         type: string
-      keyword:
-        example: Educação
+      title:
+        example: Novo projeto de lei impulsiona crescimento do setor portuário até
+          2028
+        type: string
+      type:
+        example: Proposição
         type: string
       updated_at:
-        example: "2019-02-06T09:44:00Z"
+        example: "2024-01-05T20:25:19Z"
+        type: string
+    type: object
+  response.SwaggerNewsPagination:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/response.SwaggerNews'
+        type: array
+      itens_per_page:
+        example: 25
+        type: integer
+      page:
+        example: 1
+        type: integer
+      total:
+        example: 4562
+        type: integer
+    type: object
+  response.SwaggerNewsletter:
+    properties:
+      content:
+        example: O presidente enviou ao Congresso Nacional um projeto de lei que permite
+          a concessão de descontos fiscais...
+        type: string
+      created_at:
+        example: "2023-12-24T19:15:22Z"
+        type: string
+      id:
+        example: 7963a6dd-f0b8-4065-8e56-6d2a79626db7
+        type: string
+      propositions:
+        items:
+          $ref: '#/definitions/response.SwaggerNewsletterProposition'
+        type: array
+      reference_date:
+        example: "2023-12-23T16:34:14Z"
+        type: string
+      title:
+        example: Proposta inovadora busca impulsionar o crescimento empresarial
+        type: string
+      updated_at:
+        example: "2023-12-24T19:15:22Z"
+        type: string
+    type: object
+  response.SwaggerNewsletterProposition:
+    properties:
+      code:
+        example: 9465723
+        type: integer
+      content:
+        example: O presente requerimento foi elaborado pelos deputados...
+        type: string
+      created_at:
+        example: "2023-08-09T14:55:00Z"
+        type: string
+      id:
+        example: 9dc67bd9-674f-4e4d-9536-07485335c362
+        type: string
+      image_url:
+        example: https://www.vnc.com.br/news/proposition/image/87624.jpg
+        type: string
+      original_text_url:
+        example: https://www.camara.leg.br/proposicoesWeb/prop_mostrarintegra?codteor=4865485
+        type: string
+      submitted_at:
+        example: "2023-08-09T14:25:00Z"
+        type: string
+      title:
+        example: Requerimento de Votação Nominal-Destaque de Emenda
+        type: string
+      updated_at:
+        example: "2023-08-09T14:55:00Z"
         type: string
     type: object
   response.SwaggerOrganization:
@@ -85,10 +150,37 @@ definitions:
         example: Organização Você na Câmara
         type: string
       nickname:
+        example: VNC
+        type: string
+      type:
         example: Org da Câmara
         type: string
       updated_at:
         example: "2020-12-13T18:37:00Z"
+        type: string
+    type: object
+  response.SwaggerParty:
+    properties:
+      acronym:
+        example: PVNC
+        type: string
+      code:
+        example: 78965
+        type: integer
+      created_at:
+        example: "2021-05-19T18:10:00Z"
+        type: string
+      id:
+        example: 9bb4028f-6fa8-493a-9fe8-e3bbd341c794
+        type: string
+      image_url:
+        example: https://www.camara.leg.br/internet/Deputado/img/partidos/VNC.gif
+        type: string
+      name:
+        example: Partido Você na Câmara
+        type: string
+      updated_at:
+        example: "2021-05-19T18:10:00Z"
         type: string
     type: object
   response.SwaggerProposition:
@@ -96,6 +188,9 @@ definitions:
       code:
         example: 9465723
         type: integer
+      content:
+        example: O presente requerimento foi elaborado pelos deputados...
+        type: string
       created_at:
         example: "2023-08-09T14:55:00Z"
         type: string
@@ -106,10 +201,9 @@ definitions:
       id:
         example: 9dc67bd9-674f-4e4d-9536-07485335c362
         type: string
-      keywords:
-        items:
-          $ref: '#/definitions/response.SwaggerKeyword'
-        type: array
+      image_url:
+        example: https://www.vnc.com.br/news/proposition/image/87624.jpg
+        type: string
       organizations:
         items:
           $ref: '#/definitions/response.SwaggerOrganization'
@@ -120,31 +214,12 @@ definitions:
       submitted_at:
         example: "2023-08-09T14:25:00Z"
         type: string
-      summary:
-        example: O presente requerimento foi elaborado pelos deputados...
-        type: string
       title:
         example: Requerimento de Votação Nominal-Destaque de Emenda
         type: string
       updated_at:
         example: "2023-08-09T14:55:00Z"
         type: string
-    type: object
-  response.SwaggerPropositionPagination:
-    properties:
-      data:
-        items:
-          $ref: '#/definitions/response.SwaggerProposition'
-        type: array
-      itens_per_page:
-        example: 25
-        type: integer
-      page:
-        example: 1
-        type: integer
-      total:
-        example: 4562
-        type: integer
     type: object
 info:
   contact: {}
@@ -153,18 +228,17 @@ info:
   title: VNC Read API
   version: v1
 paths:
-  /proposition:
+  /news:
     get:
-      description: Esta requisição é responsável por retornar as proposições mais
-        recentes disponíveis na plataforma Você na Câmara.
-      operationId: GetPropositions
+      description: Esta requisição é responsável por retornar as matérias mais recentes
+        disponíveis na plataforma Você na Câmara.
+      operationId: GetNews
       parameters:
       - description: Número da página. Por padrão é 1.
         in: query
         name: page
         type: integer
-      - description: Quantidade de proposições retornadas por página. Por padrão é
-          25.
+      - description: Quantidade de matérias retornadas por página. Por padrão é 25.
         in: query
         name: itemsPerPage
         type: integer
@@ -175,7 +249,7 @@ paths:
           description: Requisição bem sucedida
           schema:
             items:
-              $ref: '#/definitions/response.SwaggerPropositionPagination'
+              $ref: '#/definitions/response.SwaggerNewsPagination'
             type: array
         "400":
           description: Algum dado informado durante a requisição é inválido
@@ -185,13 +259,44 @@ paths:
           description: Ocorreu um erro inesperado durante o processamento da requisição
           schema:
             $ref: '#/definitions/response.SwaggerError'
-      summary: Listar as proposições mais recentes
+      summary: Listagem das matérias mais recentes
       tags:
-      - Proposições
-  /proposition/{propositionId}:
+      - Matérias
+  /news/newsletter/{newsletterId}:
     get:
-      description: Esta requisição é responsável por retornar os detalhes de uma proposição
-        pelo seu ID.
+      description: Esta requisição é responsável por retornar os detalhes do boletim
+        pelo ID.
+      operationId: GetNewsletterById
+      parameters:
+      - description: ID do boletim
+        in: path
+        name: newsletterId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Requisição bem sucedida
+          schema:
+            items:
+              $ref: '#/definitions/response.SwaggerNewsletter'
+            type: array
+        "400":
+          description: Algum dado informado durante a requisição é inválido
+          schema:
+            $ref: '#/definitions/response.SwaggerError'
+        "500":
+          description: Ocorreu um erro inesperado durante o processamento da requisição
+          schema:
+            $ref: '#/definitions/response.SwaggerError'
+      summary: Busca dos detalhes do boletim pelo ID
+      tags:
+      - Boletins
+  /news/proposition/{propositionId}:
+    get:
+      description: Esta requisição é responsável por retornar os detalhes da proposição
+        pelo ID.
       operationId: GetPropositionById
       parameters:
       - description: ID da proposição
@@ -206,7 +311,7 @@ paths:
           description: Requisição bem sucedida
           schema:
             items:
-              $ref: '#/definitions/response.SwaggerPropositionPagination'
+              $ref: '#/definitions/response.SwaggerProposition'
             type: array
         "400":
           description: Algum dado informado durante a requisição é inválido
@@ -216,7 +321,7 @@ paths:
           description: Ocorreu um erro inesperado durante o processamento da requisição
           schema:
             $ref: '#/definitions/response.SwaggerError'
-      summary: Buscar os detalhes de uma proposição pelo seu ID
+      summary: Busca dos detalhes da proposição pelo ID
       tags:
       - Proposições
 swagger: "2.0"
